[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Gamestates/InstructionsControl.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/gridlocked/Gridlocked.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Gamestates/Instructions/goal.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Gamestates/Instructions/unit.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Gamestates/Instructions/homebase.png" type="Texture" id=5]
[ext_resource path="res://UI/Fonts/debock/Debock-Personal-Use.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Instructions" type="Node" index="0"]

[node name="BaseControl" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Margin" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="BaseControl" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 50
custom_constants/margin_top = 0
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="BaseControl/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_right = 974.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="BaseControl/MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 924.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="InstructionsTitle" type="Label" parent="BaseControl/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 293.0
margin_right = 533.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Instructions"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="PageUI" type="Label" parent="BaseControl/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 565.0
margin_right = 631.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "1 / 2"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="HSeparator" type="HSeparator" parent="BaseControl/MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 82.0
margin_right = 924.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
_sections_unfolded = [ "custom_constants" ]

[node name="PanelContainer" type="PanelContainer" parent="BaseControl/MarginContainer/VBoxContainer" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 118.0
margin_right = 924.0
margin_bottom = 492.0
rect_min_size = Vector2( 640, 256 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3

[node name="GoalTextureRect" type="TextureRect" parent="BaseControl/MarginContainer/VBoxContainer/PanelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 27.0
margin_top = 7.0
margin_right = 897.0
margin_bottom = 367.0
rect_min_size = Vector2( 512, 256 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Anchor", "Margin", "Material" ]

[node name="HBoxContainer" type="HBoxContainer" parent="BaseControl/MarginContainer/VBoxContainer/PanelContainer" index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 27.0
margin_top = 7.0
margin_right = 897.0
margin_bottom = 267.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Margin" ]

[node name="UnitTextureRect" type="TextureRect" parent="BaseControl/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 197.0
margin_right = 453.0
margin_bottom = 260.0
rect_min_size = Vector2( 256, 128 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Size Flags" ]

[node name="HomebaseTextureRect" type="TextureRect" parent="BaseControl/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 457.0
margin_right = 713.0
margin_bottom = 260.0
rect_min_size = Vector2( 256, 128 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="HSeparator2" type="HSeparator" parent="BaseControl/MarginContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 496.0
margin_right = 924.0
margin_bottom = 528.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
_sections_unfolded = [ "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="BaseControl/MarginContainer/VBoxContainer" index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 532.0
margin_right = 924.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="Back" type="Button" parent="BaseControl/MarginContainer/VBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 238.0
margin_right = 366.0
margin_bottom = 48.0
rect_min_size = Vector2( 128, 48 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Next" type="Button" parent="BaseControl/MarginContainer/VBoxContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 398.0
margin_right = 526.0
margin_bottom = 48.0
rect_min_size = Vector2( 128, 48 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Next"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Game" type="Button" parent="BaseControl/MarginContainer/VBoxContainer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 558.0
margin_right = 686.0
margin_bottom = 48.0
rect_min_size = Vector2( 128, 48 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play Game"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[connection signal="button_down" from="BaseControl/MarginContainer/VBoxContainer/HBoxContainer/Back" to="BaseControl" method="_on_Back_button_down"]

[connection signal="button_down" from="BaseControl/MarginContainer/VBoxContainer/HBoxContainer/Next" to="BaseControl" method="_on_Next_button_down"]

[connection signal="button_down" from="BaseControl/MarginContainer/VBoxContainer/HBoxContainer/Game" to="BaseControl" method="_on_Game_button_down"]


